kustomize/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-combined-app
  labels:
    app: argo-combined-app
spec:
  selector:
    matchLabels:
      app: argo-combined-app
  template:
    metadata:
      labels:
        app: argo-combined-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: argo-combined-app
        image: filiprafaj/argo-combined-app
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
