kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-combined-app
  labels:
    app: argo-combined-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:argo-combined-app.production.svc.cluster.local:80
spec:
  rules:
  - host: argo-combined-app.test
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
           name: argo-combined-app
           port:
             number: 80
